--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <p>This is some dummy text. You can replace it with your own content.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
     </div>
+    <div class="row">
+        <a href="/website1">Website1</a>
+    </div>
 </div>
 
 <!-- Bootstrap JS and dependencies (popper.js and jQuery) -->
