--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
+    
+<div class="container mt-5">
+    <div class="row">
+        <a href="/testbeachy/website1">Website1</a>
+    </div>
+</div>
 <div class="container mt-5">
     <div class="jumbotron">
         <h1 class="display-4">Hello, Bootstrap!</h1>
@@ -17,9 +22,6 @@
         <hr class="my-4">
         <p>This is some dummy text. You can replace it with your own content.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    </div>
-    <div class="row">
-        <a href="/website1">Website1</a>
     </div>
 </div>
 
