--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
 <div class="container mt-5">
     <div class="row">
+        <a href="/testbeachy/">Home</a>
         <a href="/testbeachy/website1">Website1</a>
     </div>
 </div>
