--- a/website1/index.html
+++ b/website1/index.html
@@ -9,7 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
+    
+<div class="container mt-5">
+    <div class="row">
+        <a href="/testbeachy/">Home</a>
+        <a href="/testbeachy/website1">Website1</a>
+    </div>
+</div>
 <div class="container mt-5">
     <div class="jumbotron">
         <h1 class="display-4">Hello, Website 1</h1>
