--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="row">
         <a href="/testbeachy/">Home</a>
         <a href="/testbeachy/website1">Website1</a>
+        <a href="/testbeachy/website2">Website2</a>
     </div>
 </div>
 <div class="container mt-5">
