--- a/website1/index.html
+++ b/website1/index.html
@@ -11,11 +11,11 @@
 <body>
     
 <div class="container mt-5">
-    <div class="row">
-        <a href="/testbeachy/">Home</a>
-        <a href="/testbeachy/website1">Website1</a>
-        <a href="/testbeachy/website2">Website2</a>
-    </div>
+    <ul class="nav">
+        <li class="nav-item"><a class="nav-link" href="/testbeachy/">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/testbeachy/website1">Website1</a></li>
+        <li class="nav-item"><a class="nav-link" href="/testbeachy/website2">Website2</a></li>
+    </ul> 
 </div>
 <div class="container mt-5">
     <div class="jumbotron">
