--- a/website2/index.html
+++ b/website2/index.html
@@ -13,9 +13,9 @@
 <div class="container mt-5">
     <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/testbeachy/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/testbeachy/website1">Website1</a></li>
-        <li class="nav-item"><a class="nav-link" href="/testbeachy/website2">Website2</a></li>
-    </ul>
+        <li class="nav-item"><a class="nav-link" href="/testbeachy/link1">Link 1</a></li>
+        <li class="nav-item"><a class="nav-link" href="/testbeachy/link2">Link 2</a></li>
+    </ul> 
 </div>
 <div class="container mt-5">
     <div class="jumbotron">
