--- a/link2/index.html
+++ b/link2/index.html
@@ -19,7 +19,7 @@
 </div>
 <div class="container mt-5">
     <div class="jumbotron">
-        <h1 class="display-4">Hello, Website 2</h1>
+        <h1 class="display-4">Hello, Link 2</h1>
         <p class="lead">This is a simple Bootstrap webpage with a Jumbotron.</p>
         <hr class="my-4">
         <p>This is some dummy text. You can replace it with your own content.</p>
